<resources>
    <string name="app_name">YabeePrototype</string>
    <string name="make_bid">Make Initial Bid:</string>
    <string name="upload_image">Upload Image</string>
    <string name="bid_price">Bid Price</string>
    <string name="description">Give Brief Description</string>
    <string name="submit">Submit</string>
    <string name="go">GO</string>
    <string name="search">Search&#8230;</string>
    <string name="categories">Categories</string>
    <string name="login">Login</string>
    <string name="my_profile">My Profile</string>
    <string name="daily_buzz">Daily Buzz</string>
    <string name="textbooks">Textbooks</string>
    <string name="services">Services</string>
    <string name="electronics">Electronics</string>



</resources>
