<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    >

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="end"
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextPrimary"/>

        <Button
            android:id="@+id/btnGo"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/go"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textColor="@color/colorTextPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imgTextbook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/imgServices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/imgElectronics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvTextbooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textbooks"
            android:textSize="20sp"
            android:textColor="@color/colorTextSecondary"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvServices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/services"
            android:textSize="20sp"
            android:textColor="@color/colorTextSecondary"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvElectronics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/electronics"
            android:textSize="20sp"
            android:textColor="@color/colorTextSecondary"
            android:gravity="center"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvDailyBuzz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:text="@string/daily_buzz" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imgBuzz1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/imgBuzz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/imgBuzz3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvBuzz1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="[Post Name]"
            android:textSize="20sp"
            android:textColor="@color/colorTextSecondary"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvBuzz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="[Post Name]"
            android:textSize="20sp"
            android:textColor="@color/colorTextSecondary"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvBuzz3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="[Post Name]"
            android:textSize="20sp"
            android:textColor="@color/colorTextSecondary"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>